nav icon mobile fix

--- a/style.css
+++ b/style.css
@@ -899,13 +899,12 @@ input::placeholder {
             position: absolute;
             display: block;
             top: 10px;
-            /* right: 50px; */
+            right: -30px;
             border: none;
             background: none;
             font-size: 50px;
             cursor: pointer;
             color:hsl(255, 11%, 22%) ;
-            
         }
 
 
